--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,6 +15,12 @@ video {
   display: block;
 }
 
+body {
+  background-color: black;
+  background-image: url("../Image/FOND.png");
+  background-size: cover;
+}
+
 .row + .row {
   margin-top: 16px;
 }
@@ -23,6 +29,131 @@ video {
 .row > [class^="col-"] {
   padding-top: 12px;
   padding-bottom: 12px;
+  color: white;
   background-color: rgba(86, 61, 124, 0.15);
   border: 1px solid rgba(86, 61, 124, 0.2);
+}
+
+.texte {
+  color: var(--blanc, #fff);
+  font-family: "Nunito Sans";
+  font-size: 18px;
+  font-weight: 400;
+  opacity: 0.6;
+}
+
+.titre {
+  color: var(--gris-clair, #d9d9d9);
+  font-family: "Nunito Sans";
+  font-size: 32px;
+  font-weight: 400;
+  letter-spacing: 3.2px;
+}
+
+.bouton {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  background: var(--gris-fonc, #3b3b3b);
+  padding: 5 47 5 47;
+
+  h3 {
+    color: var(--gris-clair, #d9d9d9);
+    text-align: center;
+
+    font-family: "Nunito Sans";
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 200;
+    line-height: normal;
+  }
+}
+
+.header {
+  margin: 50px;
+
+  .col {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .Logo {
+    color: var(--blanc, #fff);
+    font-family: Fahkwang;
+    font-size: 24px;
+    font-weight: 700;
+  }
+
+  .navigation {
+    /*espacer */
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-shrink: 0;
+
+    color: var(--blanc, #fff);
+    font-family: "Nunito Sans";
+    font-size: 18px;
+    font-weight: 200;
+
+    .accueil {
+      border-bottom: 1px solid var(--gris-transparant, rgba(151, 151, 151, 0.4));
+    }
+  }
+
+  .icons {
+    display: flex;
+    width: 71px;
+    justify-content: space-between;
+    align-items: center;
+    flex-shrink: 0;
+    opacity: 0.56;
+
+    .langues {
+      color: var(--gris, #979797);
+      font-family: "Nunito Sans";
+      font-size: 15px;
+      font-weight: 700;
+    }
+  }
+}
+
+.accroche {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 18px;
+
+  box-shadow: 0px 0px 104px 0px rgba(0, 0, 0, 0.85);
+
+  h1 {
+    color: var(--gris-clair, #d9d9d9);
+    font-family: "Nunito Sans";
+    font-size: 32px;
+    font-weight: 800;
+    align-self: stretch;
+  }
+}
+
+.vins {
+  /*Centrer la bouteille + lumière derrière la bouteille*/
+
+  .imagevin {
+    width: 268px;
+    flex-shrink: 0;
+  }
+
+  .col-5 {
+    /*le placer juste*/
+    display: flex;
+    width: 455px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 18px;
+  }
+}
+
+.valeurs {
+  gap: 11px;
 }
