--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,6 +13,7 @@ a {
 img,
 video {
   display: block;
+  max-width: 100%;
 }
 
 body {
@@ -21,17 +22,24 @@ body {
   background-size: cover;
 }
 
-.row + .row {
-  margin-top: 16px;
-}
+// .row + .row {
+//   margin-top: 16px;
+// }
 
-.row > .col,
-.row > [class^="col-"] {
-  padding-top: 12px;
-  padding-bottom: 12px;
-  color: white;
-  background-color: rgba(86, 61, 124, 0.15);
-  border: 1px solid rgba(86, 61, 124, 0.2);
+// .row > .col,
+// .row > [class^="col-"] {
+//   padding-top: 12px;
+//   padding-bottom: 12px;
+//   color: white;
+//   background-color: rgba(86, 61, 124, 0.15);
+//   border: 1px solid rgba(86, 61, 124, 0.2);
+// }
+
+.Logo {
+  color: var(--blanc, #fff);
+  font-family: Fahkwang;
+  font-size: 24px;
+  font-weight: 700;
 }
 
 .texte {
@@ -50,6 +58,31 @@ body {
   letter-spacing: 3.2px;
 }
 
+.sous-titre {
+  color: var(--gris, #979797);
+  text-align: right;
+
+  font-family: "Nunito Sans";
+  font-size: 18px;
+  font-weight: 400;
+  opacity: 0.56;
+}
+
+.titre-footer {
+  color: var(--gris-clair, #d9d9d9);
+  font-family: "Nunito Sans";
+  font-size: 18px;
+  font-weight: 700;
+}
+
+.infofooter {
+  color: var(--gris-clair, #d9d9d9);
+  font-family: "Nunito Sans";
+  font-size: 14px;
+  font-weight: 400;
+  letter-spacing: 0.56px;
+}
+
 .bouton {
   display: flex;
   align-items: center;
@@ -60,12 +93,9 @@ body {
   h3 {
     color: var(--gris-clair, #d9d9d9);
     text-align: center;
-
     font-family: "Nunito Sans";
     font-size: 18px;
-    font-style: normal;
     font-weight: 200;
-    line-height: normal;
   }
 }
 
@@ -78,17 +108,10 @@ body {
     align-items: center;
   }
 
-  .Logo {
-    color: var(--blanc, #fff);
-    font-family: Fahkwang;
-    font-size: 24px;
-    font-weight: 700;
-  }
-
   .navigation {
     /*espacer */
     display: flex;
-    justify-content: space-between;
+    gap: 20px;
     align-items: flex-start;
     flex-shrink: 0;
 
@@ -124,8 +147,9 @@ body {
   flex-direction: column;
   align-items: flex-start;
   gap: 18px;
+  margin-top: 299px;
 
-  box-shadow: 0px 0px 104px 0px rgba(0, 0, 0, 0.85);
+  text-shadow: 0px 0px 104px 0px rgba(0, 0, 0, 0.85);
 
   h1 {
     color: var(--gris-clair, #d9d9d9);
@@ -144,16 +168,138 @@ body {
     flex-shrink: 0;
   }
 
-  .col-5 {
-    /*le placer juste*/
+  .detail {
     display: flex;
-    width: 455px;
+    height: 100%;
     flex-direction: column;
     align-items: flex-start;
     gap: 18px;
+    justify-content: flex-end;
   }
 }
 
 .valeurs {
   gap: 11px;
+  margin-top: 299px;
+
+  .image {
+    display: flex;
+    height: 285px;
+    align-items: flex-end;
+    gap: 24px;
+
+    .domaine {
+      width: calc(50% - 12px);
+    }
+
+    .raisains {
+      width: calc(50% - 12px);
+    }
+  }
+
+  .detail {
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: column;
+    align-items: end;
+    align-content: center;
+    gap: 18px;
+    flex-wrap: wrap;
+  }
+}
+
+.vignerons {
+  gap: 11px;
+  margin-top: 299px;
+
+  .image {
+    display: flex;
+    height: 285px;
+    align-items: flex-end;
+    gap: 24px;
+
+    .homme {
+      width: calc(50% - 12px);
+    }
+
+    .femme {
+      width: calc(50% - 12px);
+    }
+  }
+
+  .detail {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    gap: 18px;
+    flex-wrap: wrap;
+    margin-top: 50px;
+  }
+}
+
+.evenement {
+  margin-top: 299px;
+
+  .verrevin {
+    img {
+      width: 100%;
+    }
+  }
+
+  .infofooter {
+    color: var(--gris, #979797);
+  }
+
+  .detail {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 40px;
+  }
+}
+
+.footer {
+  margin: 600 80 80 80px;
+
+  .informations {
+    display: flex;
+    height: 157px;
+    justify-content: space-between;
+    align-items: flex-start;
+    align-self: stretch;
+
+    .logo-adresse {
+      display: flex;
+      width: 261px;
+      height: 82px;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
+      gap: 18px;
+    }
+
+    .menu-navigation {
+      display: flex;
+      width: 166px;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 18px;
+    }
+
+    .vente-date {
+      display: flex;
+      width: 261px;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 18px;
+    }
+
+    .contacter {
+      display: flex;
+      width: 261px;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 18px;
+    }
+  }
 }
