--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -18,8 +18,13 @@ video {
 
 body {
   background-color: black;
-  background-image: url("../Image/FOND.png");
+  background-image: url("../Image/fond.png");
   background-size: cover;
+  background-position: top center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 856px;
 }
 
 // .row + .row {
@@ -105,6 +110,19 @@ body {
   }
 }
 
+.bouton:hover {
+  opacity: 0.33;
+  background: var(--gris-clair, #d9d9d9);
+
+  h3 {
+    color: var(--noir, #000);
+    text-align: center;
+    font-family: "Nunito Sans";
+    font-size: 18px;
+    font-weight: 200;
+  }
+}
+
 .header {
   margin: 50px;
 
@@ -153,6 +171,7 @@ body {
   align-items: flex-start;
   gap: 18px;
   margin-top: 299px;
+  margin-bottom: 101px;
 
   text-shadow: 0px 0px 104px 0px rgba(0, 0, 0, 0.85);
 
@@ -169,8 +188,7 @@ body {
   /*lumière derrière la bouteille*/
 
   .imagevin {
-    width: 268px;
-    flex-shrink: 0;
+    width: 100%;
   }
 
   .detail {
@@ -180,6 +198,14 @@ body {
     align-items: flex-start;
     gap: 18px;
     justify-content: flex-end;
+    position: relative;
+
+    .forme {
+      opacity: 0.5;
+      position: absolute;
+      top: -200px;
+      right: -300px;
+    }
   }
 }
 
@@ -216,6 +242,7 @@ body {
 .vignerons {
   gap: 11px;
   margin-top: 299px;
+  position: relative;
 
   .image {
     display: flex;
@@ -240,10 +267,25 @@ body {
     flex-wrap: wrap;
     margin-top: 50px;
   }
+
+  .forme {
+    opacity: 0.5;
+    position: absolute;
+    top: -400px;
+    left: 0;
+  }
 }
 
 .evenement {
   margin-top: 299px;
+  position: relative;
+
+  .forme {
+    opacity: 0.5;
+    position: absolute;
+    bottom: -600px;
+    right: 0%;
+  }
 
   .verrevin {
     img {
@@ -264,7 +306,14 @@ body {
 }
 
 .footer {
-  margin: 600 80 80 80px;
+  padding-top: 300px;
+  background-image: url("../Image/footer.png");
+  background-size: cover;
+  background-position: bottom center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  margin-top: 5%;
 
   .informations {
     display: flex;
@@ -309,10 +358,10 @@ body {
 
     .réseaux-sociaux {
       display: flex;
-      width: 109px;
       justify-content: flex-end;
       align-items: flex-end;
       align-content: flex-end;
+      width: 109px;
       gap: 18px 5px;
       flex-wrap: wrap;
 
@@ -325,10 +374,9 @@ body {
   }
 
   .séparation {
-    width: 92%;
+    width: 100%;
     height: 1px;
     background: rgba(151, 151, 151, 0.4);
-    position: absolute;
     margin: 14 0 22 0px;
   }
 
@@ -351,7 +399,6 @@ body {
 
     .droite {
       display: flex;
-      width: 190px;
       align-items: center;
       gap: 1px;
     }
