--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,6 +8,7 @@
 
 a {
   color: inherit;
+  text-decoration: none;
 }
 
 img,
@@ -73,6 +74,15 @@ body {
   opacity: 0.56;
 }
 
+.nomvin {
+  color: var(--gris-fonc, #3b3b3b);
+  text-align: center;
+  font-family: Fahkwang;
+  font-size: 120px;
+  font-weight: 900;
+  mix-blend-mode: difference;
+}
+
 .titre-footer {
   color: var(--gris-clair, #d9d9d9);
   font-family: "Nunito Sans";
@@ -100,6 +110,7 @@ body {
   gap: 10px;
   background: var(--gris-fonc, #3b3b3b);
   padding: 5 47 5 47;
+  transition: 0.5s;
 
   h3 {
     color: var(--gris-clair, #d9d9d9);
@@ -111,7 +122,7 @@ body {
 }
 
 .bouton:hover {
-  opacity: 0.33;
+  opacity: 0.5;
   background: var(--gris-clair, #d9d9d9);
 
   h3 {
@@ -189,6 +200,7 @@ body {
 
   .imagevin {
     width: 100%;
+    transition: transform 0.5s ease-in-out;
   }
 
   .detail {
@@ -205,8 +217,13 @@ body {
       position: absolute;
       top: -200px;
       right: -300px;
+      z-index: -1;
     }
   }
+}
+
+.imagevin:hover {
+  transform: scale(1.2);
 }
 
 .valeurs {
@@ -221,11 +238,21 @@ body {
 
     .domaine {
       width: calc(50% - 12px);
+      transition: transform 0.5s ease-in-out;
     }
 
     .raisains {
       width: calc(50% - 12px);
+      transition: transform 0.5s ease-in-out;
     }
+  }
+
+  .domaine:hover {
+    transform: scale(1.1);
+  }
+
+  .raisains:hover {
+    transform: scale(1.1);
   }
 
   .detail {
@@ -252,11 +279,21 @@ body {
 
     .homme {
       width: calc(50% - 12px);
+      transition: transform 0.5s ease-in-out;
     }
 
     .femme {
       width: calc(50% - 12px);
+      transition: transform 0.5s ease-in-out;
     }
+  }
+
+  .homme:hover {
+    transform: scale(1.1);
+  }
+
+  .femme:hover {
+    transform: scale(1.1);
   }
 
   .detail {
@@ -273,6 +310,7 @@ body {
     position: absolute;
     top: -400px;
     left: 0;
+    z-index: -1;
   }
 }
 
@@ -285,12 +323,18 @@ body {
     position: absolute;
     bottom: -600px;
     right: 0%;
+    z-index: -1;
   }
 
   .verrevin {
+    transition: transform 0.5s ease-in-out;
     img {
       width: 100%;
     }
+  }
+
+  .verrevin:hover {
+    transform: scale(1.06);
   }
 
   .infofooter {
@@ -402,5 +446,60 @@ body {
       align-items: center;
       gap: 1px;
     }
+  }
+}
+
+.detailtexte {
+  display: flex;
+  width: 519px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 18px;
+  margin-top: 236px;
+
+  .élément {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    align-self: stretch;
+  }
+}
+
+.boutique {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  margin-top: 214px;
+  gap: 20px;
+  .bouton {
+    display: inline-flex;
+    align-items: center;
+    gap: 10px;
+  }
+}
+
+.vins {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 121px;
+
+  .block {
+    display: flex;
+    height: 333px;
+    align-items: center;
+    gap: 27px;
+  }
+  .detail {
+    display: flex;
+    height: 333px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 27px;
+  }
+
+  .image {
+    width: 50%;
   }
 }
