--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -17,7 +17,7 @@ video {
   max-width: 100%;
 }
 
-body {
+body.home {
   background-color: black;
   background-image: url("../Image/fond.png");
   background-size: cover;
@@ -26,6 +26,10 @@ body {
   background-repeat: no-repeat;
   width: 100%;
   height: 856px;
+}
+
+body.wine {
+  background-color: black;
 }
 
 // .row + .row {
@@ -76,11 +80,13 @@ body {
 
 .nomvin {
   color: var(--gris-fonc, #3b3b3b);
-  text-align: center;
   font-family: Fahkwang;
+  text-align: center;
   font-size: 120px;
   font-weight: 900;
   mix-blend-mode: difference;
+  position: fixed;
+  z-index: 1000;
 }
 
 .titre-footer {
@@ -110,7 +116,7 @@ body {
   gap: 10px;
   background: var(--gris-fonc, #3b3b3b);
   padding: 5 47 5 47;
-  transition: 0.5s;
+  transition: 0.7s;
 
   h3 {
     color: var(--gris-clair, #d9d9d9);
@@ -456,6 +462,9 @@ body {
   align-items: flex-start;
   gap: 18px;
   margin-top: 236px;
+  position: relative;
+  z-index: 2;
+  padding: 10px;
 
   .élément {
     display: flex;
@@ -471,6 +480,9 @@ body {
   align-items: flex-end;
   margin-top: 214px;
   gap: 20px;
+  position: relative;
+  z-index: 2;
+
   .bouton {
     display: inline-flex;
     align-items: center;
@@ -478,7 +490,7 @@ body {
   }
 }
 
-.vins {
+.vin {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -499,7 +511,60 @@ body {
     gap: 27px;
   }
 
-  .image {
+  .image-silhouette {
     width: 50%;
+    transition: transform 0.5s ease-in-out;
   }
+
+  .image-kid {
+    width: 60%;
+    transition: transform 0.5s ease-in-out;
+  }
+
+  .image-monteil {
+    width: 65%;
+    transition: transform 0.5s ease-in-out;
+  }
+
+  .image-celine {
+    width: 105%;
+    transition: transform 0.5s ease-in-out;
+  }
+}
+
+.image-silhouette:hover {
+  transform: scale(1.2);
+}
+
+.image-kid:hover {
+  transform: scale(1.2);
+}
+
+.image-monteil:hover {
+  transform: scale(1.2);
+}
+
+.image-celine:hover {
+  transform: scale(1.2);
+}
+
+.text-image-container {
+  position: relative;
+  width: 100%;
+  height: 1075px;
+  display: flex;
+  align-items: start;
+  margin-top: 15%;
+}
+
+.mockup {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50%;
+  height: 100%;
+  background-image: url("../Image/mockup.png");
+  background-size: cover;
+  background-position: center;
+  z-index: 1;
 }
