--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -124,7 +124,11 @@ body.wine2 {
   gap: 10px;
   background: var(--gris-fonc, #3b3b3b);
   padding: 5 47 5 47;
-  transition: 0.7s;
+  transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
+  outline: 1px solid;
+  outline-offset: 0px;
+  text-shadow: none;
+  border: 0 solid;
 
   h3 {
     color: var(--gris-clair, #d9d9d9);
@@ -137,10 +141,13 @@ body.wine2 {
 
 .bouton:hover {
   opacity: 0.5;
-  background: var(--gris-clair, #d9d9d9);
+  background: black;
+  border: 1px solid;
+  outline-color: var(--gris-clair, #d9d9d9);
+  outline-offset: 3px;
 
   h3 {
-    color: var(--noir, #000);
+    color: white;
     text-align: center;
     font-family: "Nunito Sans";
     font-size: 18px;
@@ -162,15 +169,6 @@ body.wine2 {
     gap: 20px;
     align-items: flex-start;
     flex-shrink: 0;
-
-    color: var(--blanc, #fff);
-    font-family: "Nunito Sans";
-    font-size: 18px;
-    font-weight: 200;
-
-    .accueil {
-      border-bottom: 1px solid var(--gris-transparant, rgba(151, 151, 151, 0.4));
-    }
   }
 
   .icons {
@@ -186,6 +184,33 @@ body.wine2 {
       font-family: "Nunito Sans";
       font-size: 15px;
       font-weight: 700;
+    }
+  }
+}
+
+.nav {
+  color: var(--blanc, #fff);
+  font-family: "Nunito Sans";
+  font-size: 18px;
+  font-weight: 200;
+  position: relative;
+
+  &::after {
+    content: "";
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    transform: translateX(-50%) scaleX(0);
+    transform-origin: 50% 50%;
+    width: 100%;
+    height: 1px;
+    background-color: rgba(255, 255, 255, 0.8);
+    transition: transform 400ms;
+  }
+
+  &:hover {
+    &::after {
+      transform: translateX(-50%) scaleX(1);
     }
   }
 }
@@ -237,7 +262,7 @@ body.wine2 {
 }
 
 .imagevin:hover {
-  transform: scale(1.2);
+  transform: scale(1.1);
 }
 
 .valeurs {
@@ -464,6 +489,15 @@ body.wine2 {
   }
 }
 
+.icons a {
+  display: inline-block;
+  transition: transform 0.3s ease;
+}
+
+.réseaux-sociaux .icons a:hover {
+  transform: scale(1.2); /* Agrandissement de 20% */
+}
+
 .detailtexte {
   display: flex;
   width: 519px;
@@ -572,13 +606,6 @@ body.wine2 {
     margin-bottom: 40px;
     margin-left: 10px;
   }
-  .forme {
-    opacity: 0.5;
-    position: absolute;
-    top: -400px;
-    right: 0px;
-    z-index: -1;
-  }
 }
 
 .image-detail {
@@ -599,3 +626,10 @@ body.wine2 {
 - ajouter encore des formes
 FIN
 */
+.formee svg {
+  position: absolute;
+  right: 0;
+  top: -30px;
+  z-index: -1;
+  opacity: 0.4;
+}
