--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -125,7 +125,7 @@ body.wine2 {
   background: var(--gris-fonc, #3b3b3b);
   padding: 5 47 5 47;
   transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
-  outline: 1px solid;
+  outline: 1px solid transparent;
   outline-offset: 0px;
   text-shadow: none;
 
@@ -618,12 +618,6 @@ body.wine2 {
   }
 }
 
-/*reste a faire:
-- effet de parallaxe
-- finir les liens (header + bouteille de vins)
-- ajouter encore des formes
-FIN
-*/
 .formee svg {
   position: absolute;
   right: 0;
